--- a/Buscamineros/Buscamineros.csproj
+++ b/Buscamineros/Buscamineros.csproj
@@ -43,6 +43,10 @@
   <ItemGroup>
     <Compile Include="CompareWhere.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="MiniSQLParser\IQuery.cs" />
+    <Compile Include="MiniSQLParser\Parser.cs" />
+    <Compile Include="MiniSQLParser\SelectColumns.cs" />
+    <Compile Include="MiniSQLParser\SelectAll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Table.cs" />
     <Compile Include="TableColumn.cs" />
