#6 classes delete and update done

--- a/Buscamineros/Buscamineros.csproj
+++ b/Buscamineros/Buscamineros.csproj
@@ -95,6 +95,7 @@
     <Compile Include="MiniSQLParser\Parser.cs" />
     <Compile Include="MiniSQLParser\SelectColumns.cs" />
     <Compile Include="MiniSQLParser\SelectAll.cs" />
+    <Compile Include="MiniSQLParser\Update.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Table.cs" />
     <Compile Include="TableColumn.cs" />
