--- a/Buscamineros/Buscamineros.csproj
+++ b/Buscamineros/Buscamineros.csproj
@@ -89,7 +89,7 @@
   <ItemGroup>
     <Compile Include="CompareWhere.cs" />
     <Compile Include="Database.cs" />
-    <Compile Include="InsertInto.cs" />
+    <Compile Include="MiniSQLParser\InsertInto.cs" />
     <Compile Include="Messages.cs" />
     <Compile Include="MiniSQLParser\Delete.cs" />
     <Compile Include="MiniSQLParser\IQuery.cs" />
@@ -98,8 +98,8 @@
     <Compile Include="MiniSQLParser\SelectAll.cs" />
     <Compile Include="MiniSQLParser\Update.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectAllWhere.cs" />
-    <Compile Include="SelectColumnWhere.cs" />
+    <Compile Include="MiniSQLParser\SelectAllWhere.cs" />
+    <Compile Include="MiniSQLParser\SelectColumnWhere.cs" />
     <Compile Include="Table.cs" />
     <Compile Include="TableColumn.cs" />
   </ItemGroup>
