--- a/Buscamineros/Buscamineros.csproj
+++ b/Buscamineros/Buscamineros.csproj
@@ -90,6 +90,7 @@
     <Compile Include="CompareWhere.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="MiniSQLParser\CreateTable.cs" />
+    <Compile Include="MiniSQLParser\dropTable.cs" />
     <Compile Include="MiniSQLParser\InsertInto.cs" />
     <Compile Include="Messages.cs" />
     <Compile Include="MiniSQLParser\Delete.cs" />
