#10 #6 Some security patterns made

--- a/Buscamineros/Buscamineros.csproj
+++ b/Buscamineros/Buscamineros.csproj
@@ -89,7 +89,10 @@
   <ItemGroup>
     <Compile Include="CompareWhere.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="MiniSQLParser\CreateSecurityProfile.cs" />
     <Compile Include="MiniSQLParser\CreateTable.cs" />
+    <Compile Include="MiniSQLParser\DeleteSecurityProfile.cs" />
+    <Compile Include="MiniSQLParser\DeleteUser.cs" />
     <Compile Include="MiniSQLParser\dropTable.cs" />
     <Compile Include="MiniSQLParser\InsertInto.cs" />
     <Compile Include="Messages.cs" />
