--- a/Buscamineros/packages.config
+++ b/Buscamineros/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.11.4" targetFramework="net472" />
+  <package id="IKVM" version="8.1.5717.0" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
