#4 security unit tests methods declared

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="UnitTestParser.cs" />
+    <Compile Include="UnitTestSecurity.cs" />
     <Compile Include="UnitTestTableColumn.cs" />
     <Compile Include="UnitTestDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
