--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,23 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+
+- task: CmdLine@2
+  inputs:
+    script: 'Bundler\bin\Release\Bundler.exe'
+
+- task: GitHubRelease@1
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
+  inputs:
+    gitHubConnection: 'GitHubPersonalAccessToken'
+    repositoryName: '$(Build.Repository.Name)'
+    action: 'edit'
+    target: '$(Build.SourceVersion)'
+    tagSource: 'userSpecifiedTag'
+    tag: 'v1.1'
+    title: 'AdminB'
+    assets: '*.zip'
+    changeLogCompareToRelease: 'lastFullRelease'
+    changeLogType: 'commitBased'
+
